# razaiapk

./: .editorconfig  .gitignore  .vercelignore  DEPLOYMENT_STATUS.md  DOM_FIX_REMOVECHILD.md  FRESH_INSTALL_TEST_RESULTS.md  MANUAL_RECONSTRUCAO.md  PINK_CLASSIFICATION_FIX.md  PROJECT_OVERVIEW.md  README.md  Razai Tools.code-workspace  RazaiTools.code-workspace  SYSTEM_SPEC.md  TESTE_FRONTEND_NOVO.md  package-lock.json  package.json  plan-loginRouting.prompt.md  supabase_migration_fix_hex.sql  supabase_schema_full.sql
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
app/: .eslintrc.cjs  check-db.html  index.html  package-lock.json  package.json  test-color.js  test-display-name.js  tsconfig.json  vite-plugin-version-inject.ts  vite.config.ts  vitest.config.ts  vitest.min.config.ts
app/scripts/: run-tests-with-dev.cjs  test-real-cloud.js
app/src/: App.tsx  main.tsx  version.ts  (+1 more)
deployment-package/: INSTALLATION_GUIDE.txt  README.md
docs/: platform-compatibility.md
mobile/: App.tsx  app.json  package-lock.json  package.json
scripts/: build-portable.mjs  build-release.mjs  deploy-upload-function.ps1  dev-tauri.ps1  fix-encoding.mjs  gen-icon.ps1  pack-portable.mjs  prepare-deployment.ps1  publish-release.mjs  setup-tauri.ps1  sync-version.mjs  test-fresh-install.ps1  test-frontend-update.ps1  test-version-visual.ps1  validate-frontend-version.ps1  verify-design.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: main.rs
supabase/: supabase_schema_full.sql
(+225 files in other folders)
