[package]
name = "razai-tools"
version = "0.1.8"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Urgent build profile: prioritize speed over maximum size reduction
strip = true           # remove symbols
lto = false            # disable LTO to speed link
codegen-units = 16     # maximize parallel codegen
opt-level = 2          # balanced optimization for faster link
panic = "abort"        # reduce binary size & speed up codegen
incremental = true     # allow incremental caching to avoid full rebuild cost
debug = false          # ensure no debug symbols
